[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llamaindex-agent-toolbox"
version = "0.1.0"
description = "LlamaIndex integration for Agent Toolbox API — search, extract, screenshot, weather, finance, email validation, and translation tools for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Agent Toolbox", email = "hello@agenttoolbox.dev"},
]
keywords = ["llamaindex", "llama-index", "ai-agent", "tools", "search", "web-scraping", "screenshot", "weather", "finance", "email-validation", "translation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "llama-index-core>=0.11.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/Vincentwei1021/agent-toolbox"
Repository = "https://github.com/Vincentwei1021/agent-toolbox/tree/master/integrations/llamaindex"
Documentation = "https://github.com/Vincentwei1021/agent-toolbox#readme"
Issues = "https://github.com/Vincentwei1021/agent-toolbox/issues"

[tool.setuptools.packages.find]
include = ["llamaindex_agent_toolbox*"]
